--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <div class="dashboard" (window:resize)="changeRatioByWidth()">
+  <app-currency-pair-info></app-currency-pair-info>
+
   <div class="dashboard__widget-wrap">
 
     <ngx-gridster #gridsterContainer
@@ -65,7 +67,6 @@
     <!--</div>-->
 
   </div>
-  <app-ico-search></app-ico-search>
   <app-market-search></app-market-search>
 </div>
 
