change layout in dashboard, fix search pair popup, fix dashboard-tools

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .dashboard__widget-wrap{
   //min-width: 1200px;
-  padding: 20px 0;
+  //padding: 20px 0;
 }
 
 // TODO: remove border in production
