--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" href="#"><span class="menu__link-text">Orders</span></a>
+      <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link" href="#" routerLink="open-orders"><span class="menu__link-text">Open orders</span></a></li>
