--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -1,3 +1,9 @@
-<p>
-  open-orders works!
-</p>
+<div class="orders">
+  <div class="page-title">
+    <h1 class="page-title__text">
+      Open orders
+    </h1>
+  </div>
+</div>
+
+
