--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -2,21 +2,21 @@
   display: none;
 }
 /*--- media start ---*/
-@media (min-width:600px) {}
-@media (min-width:900px) {}
 @media (min-width:1200px) {
   .dashboard-tools{
     display: inline-block;
     position: fixed;
-    padding-top: 80px;
+    //padding-top: 80px;
     z-index: 900;
-    top: 20px;
-    left: -88px;
+    top: 0px;
+    left: -99px;
     height: 100%;
     //max-width: 0px;
     overflow-x: hidden;
     overflow-y: scroll;
     border-right: 4px solid $darker-blue;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
     background-color: $dark-indigo;
     color:#fff;
     -webkit-transition: 0.5s ease all;
@@ -36,8 +36,9 @@
       display: flex;
       align-items: center;
       justify-content:center;
-      padding: 4px 0;
-      border-bottom: 1px solid $darker-blue ;
+      padding: 12px 0 0;
+      color: $light-blue;
+      //border-bottom: 1px solid $darker-blue ;
       margin-bottom: 20px;
     }
     &__item{
