--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -40,6 +40,7 @@
 /*--- PAGES ---*/
 @import "pages/login-registration";
 @import "pages/dashboard";
+@import "pages/orders";
 @import "pages/settings/settings";
 @import "pages/settings/2fa/settings-2fa";
 @import "pages/settings/nickname/settings-nickname";
