--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,75 +1,78 @@
+<div class="container container--dashboard">
 <div class="dashboard" (window:resize)="changeRatioByWidth()">
-  <app-currency-pair-info></app-currency-pair-info>
 
-  <div class="dashboard__widget-wrap">
+    <app-currency-pair-info></app-currency-pair-info>
 
-    <ngx-gridster #gridsterContainer
-                  [options]="gridsterOptions"
-                  [draggableOptions]="{ handlerClass: 'panel-heading' }">
+    <div class="dashboard__widget-wrap">
 
-       <ngx-gridster-item *ngFor="let widget of widgets; let index = index" [options]="gridsterItemOptions"
-          [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h"
-          [(xSm)]="widget.xSm" [(ySm)]="widget.ySm" [(wSm)]="widget.wSm" [(hSm)]="widget.hSm"
-          [(xMd)]="widget.xMd" [(yMd)]="widget.yMd" [(wMd)]="widget.wMd" [(hMd)]="widget.hMd"
-          [(xLg)]="widget.xLg" [(yLg)]="widget.yLg" [(wLg)]="widget.wLg" [(hLg)]="widget.hLg"
-          [(xXl)]="widget.xXl" [(yXl)]="widget.yXl" [(wXl)]="widget.wXl" [(hXl)]="widget.hXl"
-          [(dragAndDrop)]="widget.dragAndDrop" [(resizable)]="widget.resizable" class="gridster-item">
+      <ngx-gridster #gridsterContainer
+                    [options]="gridsterOptions"
+                    [draggableOptions]="{ handlerClass: 'panel-heading' }">
+
+        <ngx-gridster-item *ngFor="let widget of widgets; let index = index" [options]="gridsterItemOptions"
+                           [(x)]="widget.x" [(y)]="widget.y" [(w)]="widget.w" [(h)]="widget.h"
+                           [(xSm)]="widget.xSm" [(ySm)]="widget.ySm" [(wSm)]="widget.wSm" [(hSm)]="widget.hSm"
+                           [(xMd)]="widget.xMd" [(yMd)]="widget.yMd" [(wMd)]="widget.wMd" [(hMd)]="widget.hMd"
+                           [(xLg)]="widget.xLg" [(yLg)]="widget.yLg" [(wLg)]="widget.wLg" [(hLg)]="widget.hLg"
+                           [(xXl)]="widget.xXl" [(yXl)]="widget.yXl" [(wXl)]="widget.wXl" [(hXl)]="widget.hXl"
+                           [(dragAndDrop)]="widget.dragAndDrop" [(resizable)]="widget.resizable" class="gridster-item">
           <ng-template [ngTemplateOutlet]="loadWidgetTemplate(widget.type)" [ngTemplateOutletContext]="{ $implicit: index}">
-        </ng-template>
-      </ngx-gridster-item>
+          </ng-template>
+        </ngx-gridster-item>
 
-    </ngx-gridster>
+      </ngx-gridster>
 
-    <ng-template #graph let-index>
-       <app-graph (changeItemSize)="changeItemSize($event)"
+      <ng-template #graph let-index>
+        <app-graph (changeItemSize)="changeItemSize($event)"
+                   (removeItem)="removeItem(index)">
+        </app-graph>
+      </ng-template>
+
+      <ng-template #markets let-index>
+        <app-markets (changeItemSize)="changeItemSize($event)"
+                     (removeItem)="removeItem(index)">
+        </app-markets>
+      </ng-template>
+
+      <ng-template #trading let-index>
+        <app-trading (changeItemSize)="changeItemSize($event)"
+                     (removeItem)="removeItem(index)">
+        </app-trading>
+      </ng-template>
+
+      <ng-template #orderBook let-index>
+        <app-order-book (changeItemSize)="changeItemSize($event)"
+                        (removeItem)="removeItem(index)" class="dashboard-item">
+        </app-order-book>
+      </ng-template>
+
+      <ng-template #tradeHistory let-index>
+        <app-trade-history (changeItemSize)="changeItemSize($event)"
+                           (removeItem)="removeItem(index)">
+        </app-trade-history>
+      </ng-template>
+
+      <ng-template #chat let-index>
+        <app-chat (changeItemSize)="changeItemSize($event)"
                   (removeItem)="removeItem(index)">
-       </app-graph>
-    </ng-template>
+        </app-chat>
+      </ng-template>
 
-    <ng-template #markets let-index>
-       <app-markets (changeItemSize)="changeItemSize($event)"
+      <ng-template #orders let-index>
+        <app-orders (changeItemSize)="changeItemSize($event)"
                     (removeItem)="removeItem(index)">
-       </app-markets>
-    </ng-template>
+        </app-orders>
+      </ng-template>
 
-    <ng-template #trading let-index>
-       <app-trading (changeItemSize)="changeItemSize($event)"
-                    (removeItem)="removeItem(index)">
-       </app-trading>
-    </ng-template>
+      <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
+      <!--<app-active-pair></app-active-pair>-->
+      <!--</div>-->
 
-    <ng-template #orderBook let-index>
-       <app-order-book (changeItemSize)="changeItemSize($event)"
-                       (removeItem)="removeItem(index)" class="dashboard-item">
-       </app-order-book>
-    </ng-template>
-
-    <ng-template #tradeHistory let-index>
-       <app-trade-history (changeItemSize)="changeItemSize($event)"
-                          (removeItem)="removeItem(index)">
-       </app-trade-history>
-    </ng-template>
-
-    <ng-template #chat let-index>
-       <app-chat (changeItemSize)="changeItemSize($event)"
-                 (removeItem)="removeItem(index)">
-       </app-chat>
-    </ng-template>
-
-    <ng-template #orders let-index>
-      <app-orders (changeItemSize)="changeItemSize($event)"
-                (removeItem)="removeItem(index)">
-      </app-orders>
-    </ng-template>
-
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
-    <!--<app-active-pair></app-active-pair>-->
-    <!--</div>-->
-
+    </div>
+    <app-market-search></app-market-search>
+    <app-tools [dashboardItems]="widgets">
+    </app-tools>
   </div>
-  <app-market-search></app-market-search>
-  <app-tools [dashboardItems]="widgets">
-  </app-tools>
 </div>
 
 
