--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,62 +1,64 @@
-<div class="settings">
-  <div class="settings__sidebar">
-    <div class="ppage-title settings__sidebar-title">
-      <h1 class="page-title__text">Settings </h1>
+<div class="container">
+  <div class="settings">
+    <div class="settings__sidebar">
+      <div class="ppage-title settings__sidebar-title">
+        <h1 class="page-title__text">Settings </h1>
+      </div>
+      <ul class="sidebar-menu">
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/two-factor-auth']">
+            Two-Factor Authentication
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/password']">
+            Password
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/session']">
+            Session Time
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/nickname']">
+            Add Nickname
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/verification']">
+            Identity verification
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/e-notification']">
+            Email Notifications
+          </a>
+        </li>
+        <li class="sidebar-menu__item">
+          <a class="sidebar-menu__link"
+             [routerLinkActive]="['sidebar-menu__link--active']"
+             [routerLink]="['/settings/view']">
+            View
+          </a>
+        </li>
+      </ul>
     </div>
-    <ul class="sidebar-menu">
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/two-factor-auth']">
-          Two-Factor Authentication
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/password']">
-          Password
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/session']">
-          Session Time
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/nickname']">
-          Add Nickname
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/verification']">
-          Identity verification
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/e-notification']">
-          Email Notifications
-        </a>
-      </li>
-      <li class="sidebar-menu__item">
-        <a class="sidebar-menu__link"
-           [routerLinkActive]="['sidebar-menu__link--active']"
-           [routerLink]="['/settings/view']">
-          View
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div style="width:100%">
-    <router-outlet></router-outlet>
+    <div style="width:100%">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
 
