--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -78,12 +78,13 @@ b {
     padding: 0 0 60px;
   }
   @media (min-width:1200px) {
-    //padding: 75px 0 0;
+    padding: 0;
   }
 }
 .container{
   position: relative;
   width: 100%;
+  height: 100%;
   max-width: 1320px;
   margin: 0 auto;
   @media (min-width:600px) {
