--- a/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
@@ -2,7 +2,7 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="dropdown__btn" (click)="toggleCurrencySearch()">{{pair.currencyPairName}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
           <li class="dropdown__item">LTC</li>
@@ -11,7 +11,7 @@
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="dropdown__btn" (click)="toggleCurrencySearch()">{{pair.market}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(1)">{{secondCurrency}}</div>
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
           <li class="dropdown__item">LTC</li>
@@ -56,4 +56,6 @@
     (closeCurrencySearch)="toggleCurrencySearch()"
     (selectCurrency)="onSelectCurrency($event)">
   </app-currency-search>
+
+  <div class="overlay" *ngIf="showCurrencySearch" (click)="toggleCurrencySearch()"></div>
 </div>
