--- a/src/assets/scss/components/_trading-notification.scss
+++ b/src/assets/scss/components/_trading-notification.scss
@@ -123,7 +123,7 @@
 @media (min-width:1200px) {
   .dark-theme{
     .trading-notification{
-      background: linear-gradient(to bottom, #3B407F 0%, #237BEF 100%);
+      background: linear-gradient(to bottom, #30314D 0%, #237BEF 100%);
       border: 1px solid $darker-blue;
       &__close{
         svg{
