--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -35,6 +35,7 @@
 @import "components/market-search";
 @import "components/dashboard-tools";
 @import "components/trading-notification";
+@import "components/order-edit-popup";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
