--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -9,7 +9,7 @@
       </svg>
       Created
     </th>
-    <th class="table__cell-head table__cell-head--tal">Order</th>
+    <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Order</th>-->
     <th class="table__cell-head table__cell-head--tal">Type</th>
     <th class="table__cell-head table__cell-head--tal">Average Price</th>
     <th class="table__cell-head table__cell-head--tal">Amount</th>
@@ -31,10 +31,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -43,7 +40,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.02%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -66,10 +63,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -78,7 +72,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.42%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -101,10 +95,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -113,7 +104,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.34%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -136,11 +127,9 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
+      <span>Sell <span>(Limit)</span></span>
     </td>
-    <td class="table__cell">
-      <span>Limit</span>
-    </td>
+
     <td class="table__cell">
       <span>4500 USD</span>
     </td>
@@ -148,7 +137,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.53%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -171,10 +160,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Sell <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -183,7 +169,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.12%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -206,10 +192,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -218,7 +201,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.02%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
