--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -9,7 +9,7 @@
       </svg>
       Created
     </th>
-    <th class="table__cell-head table__cell-head--tal">Order</th>
+    <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Order</th>-->
     <th class="table__cell-head table__cell-head--tal">Type</th>
     <th class="table__cell-head table__cell-head--tal">Average Price</th>
     <th class="table__cell-head table__cell-head--tal">Amount</th>
@@ -29,10 +29,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -41,7 +38,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.02%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -58,10 +55,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -70,7 +64,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.42%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -87,10 +81,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -99,7 +90,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.34%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -116,11 +107,9 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
+      <span>Sell <span>(Limit)</span></span>
     </td>
-    <td class="table__cell">
-      <span>Limit</span>
-    </td>
+
     <td class="table__cell">
       <span>4500 USD</span>
     </td>
@@ -128,7 +117,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.53%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -145,10 +134,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Sell <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -157,7 +143,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.12%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -174,10 +160,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy</span>
-    </td>
-    <td class="table__cell">
-      <span>Limit</span>
+      <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -186,7 +169,7 @@
       <span>0.005 BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span> ~ <span>0.9 USD</span>
+      <span>0.02%</span>
     </td>
     <td class="table__cell">
       <span>6000 USD</span>
@@ -194,6 +177,7 @@
   </tr>
 
   </tbody>
+
 </table>
 <div class="row" style="margin: 0 16px;">
   <ul class="paginator" style="margin-left: auto;">
