--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -1,4 +1,21 @@
 <div class="container">
+  <!--orders-mob start-->
+  <div class="orders orders--mob">
+    <div class="orders__header-mob">
+      <div class=" orders__page-title">
+          Open orders
+      </div>
+      <div class="orders__amount">15</div>
+      <div class="orders__filter-btn">
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z"/>
+        </svg>
+        Filters
+      </div>
+    </div>
+  </div>
+  <!--orders-mob end-->
+  <!--orders-desktop start-->
   <div class="orders">
     <div class="page-title">
       <h1 class="page-title__text">
@@ -36,10 +53,227 @@
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
-
       </div>
     </form>
+    <!--table start-->
+    <table class="table">
+      <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--tal">Order id</th>
+        <th class="table__cell-head table__cell-head--tal">Created</th>
+        <th class="table__cell-head table__cell-head--tal">Market</th>
+        <th class="table__cell-head table__cell-head--tal">Type</th>
+        <th class="table__cell-head table__cell-head--tal">Amount</th>
+        <th class="table__cell-head table__cell-head--tal" style="width: 60px;"></th>
+        <th class="table__cell-head table__cell-head--tal">Price</th>
+        <th class="table__cell-head table__cell-head--tal">Comission</th>
+        <th class="table__cell-head table__cell-head--tal">Total</th>
+        <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
+        <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
+      </tr>
+      </thead>
+      <tbody class="table__body">
+      <tr class="table__row">
+        <td class="table__cell">
+          <span>234566113434</span>
+        </td>
+        <td class="table__cell">
+          <div class="table__date-time">
+            <div>Th 13.06.2018</div>
+            <div>10:59:41</div>
+          </div>
+        </td>
+        <td class="table__cell">
+          <a class="orders__market">BTC/USD</a>
+        </td>
+        <td class="table__cell">
+          <span class="orders__type-buy">Buy (limit)</span>
+        </td>
+        <td class="table__cell">
+          <span>4500 USD</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__for">for</span>
+        </td>
+        <td class="table__cell">
+          <span>0.005 BTC</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__comission">30% </span><span class="orders__comission-usd">~<span> 0.00015 USD</span></span>
+        </td>
+        <td class="table__cell">
+          <span>6000 USD</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
+        </td>
+      </tr>
+      <tr class="table__row">
+        <td class="table__cell">
+          <span>234566113434</span>
+        </td>
+        <td class="table__cell">
+          <div class="table__date-time">
+            <div>Th 13.06.2018</div>
+            <div>10:59:41</div>
+          </div>
+        </td>
+        <td class="table__cell">
+          <a class="orders__market">BTC/USD</a>
+        </td>
+        <td class="table__cell">
+          <span class="orders__type-sell">Sell (limit)</span>
+        </td>
+        <td class="table__cell">
+          <span>4500 USD</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__for">for</span>
+        </td>
+        <td class="table__cell">
+          <span>0.005 BTC</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__comission">30% </span><span class="orders__comission-usd">~<span> 0.00015 USD</span></span>
+        </td>
+        <td class="table__cell">
+          <span>6000 USD</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
+        </td>
+      </tr>
+      <tr class="table__row">
+        <td class="table__cell">
+          <span>234566113434</span>
+        </td>
+        <td class="table__cell">
+          <div class="table__date-time">
+            <div>Th 13.06.2018</div>
+            <div>10:59:41</div>
+          </div>
+        </td>
+        <td class="table__cell">
+          <a class="orders__market">BTC/USD</a>
+        </td>
+        <td class="table__cell">
+          <span class="orders__type-buy">Buy (limit)</span>
+        </td>
+        <td class="table__cell">
+          <span>4500 USD</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__for">for</span>
+        </td>
+        <td class="table__cell">
+          <span>0.005 BTC</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__comission">30% </span><span class="orders__comission-usd">~<span> 0.00015 USD</span></span>
+        </td>
+        <td class="table__cell">
+          <span>6000 USD</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
+        </td>
+      </tr>
+      <tr class="table__row">
+        <td class="table__cell">
+          <span>234566113434</span>
+        </td>
+        <td class="table__cell">
+          <div class="table__date-time">
+            <div>Th 13.06.2018</div>
+            <div>10:59:41</div>
+          </div>
+        </td>
+        <td class="table__cell">
+          <a class="orders__market">BTC/USD</a>
+        </td>
+        <td class="table__cell">
+          <span class="orders__type-sell">Sell (limit)</span>
+        </td>
+        <td class="table__cell">
+          <span>4500 USD</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__for">for</span>
+        </td>
+        <td class="table__cell">
+          <span>0.005 BTC</span>
+        </td>
+        <td class="table__cell">
+          <span class="orders__comission">30% </span><span class="orders__comission-usd">~<span> 0.00015 USD</span></span>
+        </td>
+        <td class="table__cell">
+          <span>6000 USD</span>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
+        </td>
+        <td class="table__cell">
+          <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
+        </td>
+      </tr>
+
+      </tbody>
+    </table>
+    <!--table end-->
+    <!--paginator start-->
+    <div class="row row--aic" style="margin: 0 16px;">
+      <div class="show-filter">
+        Showing <span>1</span> to
+        <div class="dropdown">
+          <div class="dropdown__btn">14</div>
+          <ul class="dropdown__list">
+            <li class="dropdown__item">24</li>
+            <li class="dropdown__item">34</li>
+            <li class="dropdown__item">44</li>
+          </ul>
+        </div>
+        of <span>192</span> entries.
+      </div>
+      <ul class="paginator" style="margin-left: auto;">
+        <li class="paginator__item">
+          <a class="paginator__link paginator__link--arr" href="#">
+            <img class="paginator__arr-prev" src="../../assets/img/paginator-prev.svg" alt="prev">
+          </a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link" href="#">1</a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link" href="#">3</a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link" href="#">4</a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link" href="#">...</a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link" href="#">8</a>
+        </li>
+        <li class="paginator__item">
+          <a class="paginator__link paginator__link--arr" href="#">
+            <img class="paginator__arr-next" src="../../assets/img/paginator-next.svg" alt="next">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!--paginator end-->
   </div>
+  <!--orders-desckop end-->
 </div>
 
 
