--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -52,7 +52,6 @@
     background-position: center;
     -webkit-background-size: cover;
     background-size: cover;
-    //background-image: url("assets/img/calendar.svg");
   }
 }
 
@@ -73,7 +72,16 @@
   }
   .mydp .selection {
     color:#fff !important;
-    //background-color: $dark-indigo !important;
+  }
+  .icon-mydpcalendar {
+    &:before {
+      background-image: url("assets/img/calendar-light-blue.svg");
+    }
+  }
+  .icon-mydpremove{
+    &:before {
+      background-image: url("assets/img/close-light-blue.svg");
+    }
   }
 }
 @media (min-width:1200px) {
