--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -142,6 +142,7 @@
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     font-size: 14px;
+    background-color: transparent;
 
     &:focus {
       border-color: $darker-blue;
