--- a/src/app/dashboard/order-book/order-book.component.scss
+++ b/src/app/dashboard/order-book/order-book.component.scss
@@ -56,6 +56,7 @@
     flex-wrap: nowrap;
     position: relative;
     z-index: 100;
+    font-size: 11px;
   }
 
   .item:hover {
@@ -79,12 +80,12 @@
   }
 
   .order {
-    width: 15%;
+    width: 23%;
     max-width: 100%;
   }
 
   .info {
-    width: 35%;
+    width: 27%;
     max-width: 100%;
     span {
       padding-left: 5px;
