--- a/src/app/dashboard/trading/buy/buy.component.html
+++ b/src/app/dashboard/trading/buy/buy.component.html
@@ -1,12 +1,12 @@
 <div class="widget__content">
   <form class="widget__trading-form" action="">
     <div class="row row--jcsb row--aic widget__trading-row">
-      <div class="dropdown widget__limit-dropdown">
+      <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDpropdownOpen}" (click)="toggleLimitDropdown()">
         <div class="dropdown__btn">Limit order</div>
         <ul class="dropdown__list">
           <li class="dropdown__item">Limit order</li>
-          <li class="dropdown__item">Stop limit</li>
-          <li class="dropdown__item">ICO order</li>
+          <li class="dropdown__item">Stop-limit order</li>
+          <!--<li class="dropdown__item">ICO order</li>-->
         </ul>
       </div>
       <div class="row">
