--- a/src/app/dashboard/trading/sell/sell.component.html
+++ b/src/app/dashboard/trading/sell/sell.component.html
@@ -1,60 +1,109 @@
 <div class="widget__content">
   <form class="widget__trading-form" action="">
     <div class="row row--jcsb row--aic widget__trading-row">
-      <div class="dropdown widget__limit-dropdown">
-        <div class="dropdown__btn">Limit order</div>
+      <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDpropdownOpen}" (click)="toggleLimitDropdown()">
+        <div class="dropdown__btn">{{dropdownLimitValue}}</div>
         <ul class="dropdown__list">
-          <li class="dropdown__item">Limit order</li>
-          <li class="dropdown__item">Stop limit</li>
-          <li class="dropdown__item">ICO order</li>
+          <li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{limit}}</li>
         </ul>
       </div>
       <div class="row row-jcsb">
         <label class="radio radio--mr12">
           <input class="radio__input" type="radio" name="radio-procent">
-          <span class="radio__text">
+          <span class="radio__text " [ngClass]="{'radio__text--checked': percents === 5}" (click)="selectedPercent(5)">
           5%
         </span>
         </label>
         <label class="radio radio--mr12">
           <input class="radio__input" type="radio" name="radio-procent">
-          <span class="radio__text">
+          <span class="radio__text" [ngClass]="{'radio__text--checked': percents === 25}" (click)="selectedPercent(25)">
           25%
         </span>
         </label>
         <label class="radio radio--mr12">
           <input class="radio__input" type="radio" name="radio-procent">
-          <span class="radio__text">
+          <span class="radio__text" [ngClass]="{'radio__text--checked': percents === 50}" (click)="selectedPercent(50)">
           50%
         </span>
         </label>
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
-          <span class="radio__text">
+          <span class="radio__text" [ngClass]="{'radio__text--checked': percents === 100}" (click)="selectedPercent(100)">
           100%
         </span>
         </label>
       </div>
     </div>
+    <form [formGroup]="limitForm" *ngIf="this.dropdownLimitValue === 'Limit order'">
+
+    <div class="row row--jcsb widget__trading-row" >
+
+      <div class="wrap-input widget__input widget__input--mr32">
+        <input class="wrap-input__input" type="text"
+               formControlName="quantityOf"
+               (input)="percents = null"
+               name="quantityOf">
+        <label class="wrap-input__label" for="">Quantity of BTC</label>
+        <div class="wrap-input__line"></div>
+      </div>
+
+      <div class="wrap-input widget__input">
+        <input class="wrap-input__input" type="text"
+               formControlName="priceIn"
+               name="priceIn">
+        <label class="wrap-input__label" for="">Price in USD</label>
+        <div class="wrap-input__line"></div>
+      </div>
+
+    </div>
+
+    <div class="row row--jcsb widget__trading-row">
+      <div class="wrap-input widget__input">
+        <input class="wrap-input__input" type="text"
+               formControlName="totalIn"
+               name="totalIn">
+        <label class="wrap-input__label" for="">Total in USD</label>
+        <div class="wrap-input__line"></div>
+      </div>
+    </div>
+
+      </form>
+    <form [formGroup]="stopForm" *ngIf="this.dropdownLimitValue === 'Stop-limit order'">
     <div class="row row--jcsb widget__trading-row">
       <div class="wrap-input widget__input widget__input--mr32">
-        <input class="wrap-input__input" type="text" required>
+        <input class="wrap-input__input" type="text"
+               formControlName="stop"
+               name="stop">
+        <label class="wrap-input__label" for="">Stop</label>
+        <div class="wrap-input__line"></div>
+      </div>
+      <div class="wrap-input widget__input">
+        <input class="wrap-input__input" type="text"
+               formControlName="limit"
+               name="limit">
+        <label class="wrap-input__label" for="">Limit</label>
+        <div class="wrap-input__line"></div>
+      </div>
+    </div>
+    <div class="row row--jcsb widget__trading-row">
+      <div class="wrap-input widget__input widget__input--mr32">
+        <input class="wrap-input__input" type="text"
+               formControlName="quantityOf"
+               (input)="percents = null"
+               name="quantityOf">
         <label class="wrap-input__label" for="">Quantity of BTC</label>
         <div class="wrap-input__line"></div>
       </div>
       <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text" required>
-        <label class="wrap-input__label" for="">Price in USDT</label>
+        <input class="wrap-input__input" type="text"
+               formControlName="totalIn"
+               name="totalIn">
+        <label class="wrap-input__label" for="">Total in USD</label>
         <div class="wrap-input__line"></div>
       </div>
     </div>
-    <div class="row row--jcsb widget__trading-row">
-      <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text" required>
-        <label class="wrap-input__label" for="">Total in USDT</label>
-        <div class="wrap-input__line"></div>
-      </div>
-    </div>
+    </form>
+
     <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
       <div class="avaliable">
         <span>
@@ -64,6 +113,9 @@
         </span>
         <span style="vertical-align: middle;">Avaliable: </span>
         <a href="#">300 000 000 USD</a>
+      <div>
+        Avaliable: <a href="#">{{userMoney}} USD</a>
+
       </div>
       <div>
         Fee: 0.45 USD
@@ -76,9 +128,12 @@
         <a href="#">Become VIP</a>
       </div>
     </div>
-    <button class="btn btn--active widget__trading-btn">Sell BTC</button>
-  </form>
+    <button class="btn btn--active widget__trading-btn" (click)="onSubmit()">Sell BTC</button>
 </div>
+
+
+
+
 <div class="widget__content widget__content--mob" style="height: 100%;">
   <div class="widget__header--mob">
     <div class="widget__name-mob widget__trade-title widget__trade-title--red"><img src="../../assets/img/btc-icon.svg" alt="">Sell BTC</div>
