--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -13,7 +13,7 @@
     height: 100%;
     //max-width: 0px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-right: 4px solid $darker-blue;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
