--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -125,7 +125,7 @@
     position: relative;
     height: calc(100% - 45px);
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     &--mob {
       display: block;
       //height: 100%;
