some change in open-order mob

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -13,6 +13,64 @@
         Filters
       </div>
     </div>
+    <table class="table table--mob">
+      <thead class="table__head">
+      <tr class="table__head-row">
+        <th class="table__cell-head table__cell-head--tal">Market/Date
+          <svg class="table__cell-head-arr" style="margin: 0 0 0 4px;" width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z"/>
+          </svg>
+        </th>
+        <th class="table__cell-head table__cell-head--tal"> Amount</th>
+        <th class="table__cell-head table__cell-head--tar">Price</th>
+      </tr>
+      </thead>
+      <tbody class="table__body">
+      <!-- t-row start-->
+      <tr class="table__row--mob">
+        <td class="table__cell table__cell--tal">
+          <div>BTC / ETH</div>
+          <div class="table__date-time">
+            <div>Th 13.06.2018</div>
+            <div>10:59:41</div>
+          </div>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span>0.506</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <div>1.1068069</div>
+          <span class="txt-small txt-red">Sell limit</span>
+        </td>
+      <!-- t-row end-->
+      <!-- t-row start-->
+      <tr class="table-row--request-details">
+        <td class="table__cell table__cell-more-info--mob" colspan="4">
+          <div class="request__details-left-line"></div>
+          <div class="requests__details-item">
+            <div class="requests__details-item-title">Comission</div>
+            <div class="requests__details-item-value">0.02% ~ 200 000 </div>
+          </div>
+          <div class="requests__details-item">
+            <div class="requests__details-item-title">Payment system</div>
+            <div class="requests__details-item-value">CIMB NAGA </div>
+          </div>
+          <div class="requests__details-item">
+            <div class="requests__details-item-title">Status</div>
+            <div class="requests__details-item-value">Awaits payment</div>
+          </div>
+          <div class="requests__details-item">
+            <div class="requests__details-item-title requests__details-item-left"><a class="button table__cell-button table__cell-button--visible" href="#">I paid</a></div>
+            <div class="requests__details-item-value requests__details-item-right"><a class="button table__cell-button table__cell-button--visible table__cell-button--revoke table__cell-button--red" href="#">Revoke                      </a></div>
+          </div>
+          <div class="requests__details-item-line"></div>
+        </td>
+      </tr>
+      <!-- t-row end-->
+
+      </tbody>
+    </table>
   </div>
   <!--orders-mob end-->
   <!--orders-desktop start-->
