fix grid and trading

--- a/src/app/dashboard/orders/orders.component.html
+++ b/src/app/dashboard/orders/orders.component.html
@@ -70,7 +70,7 @@
     <!--<app-orders-history></app-orders-history>-->
   </div>
   <!--popup start-->
-  <div class="order-edit-popup">
+  <div class="order-edit-popup" *ngIf="false">
     <div class="order-edit-popup__content order-edit-popup__content--mob"></div>
     <div class="order-edit-popup__content">
       <div class="order-edit-popup__title">Edit order <span>#234566113434</span></div>
