--- a/src/app/dashboard/trading/sell/sell.component.html
+++ b/src/app/dashboard/trading/sell/sell.component.html
@@ -36,86 +36,84 @@
     </div>
     <form [formGroup]="limitForm" *ngIf="this.dropdownLimitValue === 'Limit order'">
 
-    <div class="row row--jcsb widget__trading-row" >
+      <div class="row row--jcsb widget__trading-row">
 
-      <div class="wrap-input widget__input widget__input--mr32">
-        <input class="wrap-input__input" type="text"
-               formControlName="quantityOf"
-               (input)="percents = null"
-               name="quantityOf">
-        <label class="wrap-input__label" for="">Quantity of BTC</label>
-        <div class="wrap-input__line"></div>
+        <div class="wrap-input widget__input widget__input--mr32">
+          <input class="wrap-input__input" type="text"
+                 formControlName="quantityOf"
+                 (input)="percents = null"
+                 name="quantityOf">
+          <label class="wrap-input__label" for="">Quantity of BTC</label>
+          <div class="wrap-input__line"></div>
+        </div>
+
+        <div class="wrap-input widget__input">
+          <input class="wrap-input__input" type="text"
+                 formControlName="priceIn"
+                 name="priceIn">
+          <label class="wrap-input__label" for="">Price in USD</label>
+          <div class="wrap-input__line"></div>
+        </div>
+
       </div>
 
-      <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text"
-               formControlName="priceIn"
-               name="priceIn">
-        <label class="wrap-input__label" for="">Price in USD</label>
-        <div class="wrap-input__line"></div>
+      <div class="row row--jcsb widget__trading-row">
+        <div class="wrap-input widget__input">
+          <input class="wrap-input__input" type="text"
+                 formControlName="totalIn"
+                 name="totalIn">
+          <label class="wrap-input__label" for="">Total in USD</label>
+          <div class="wrap-input__line"></div>
+        </div>
       </div>
 
-    </div>
-
-    <div class="row row--jcsb widget__trading-row">
-      <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text"
-               formControlName="totalIn"
-               name="totalIn">
-        <label class="wrap-input__label" for="">Total in USD</label>
-        <div class="wrap-input__line"></div>
-      </div>
-    </div>
-
-      </form>
+    </form>
     <form [formGroup]="stopForm" *ngIf="this.dropdownLimitValue === 'Stop-limit order'">
-    <div class="row row--jcsb widget__trading-row">
-      <div class="wrap-input widget__input widget__input--mr32">
-        <input class="wrap-input__input" type="text"
-               formControlName="stop"
-               name="stop">
-        <label class="wrap-input__label" for="">Stop</label>
-        <div class="wrap-input__line"></div>
+      <div class="row row--jcsb widget__trading-row">
+        <div class="wrap-input widget__input widget__input--mr32">
+          <input class="wrap-input__input" type="text"
+                 formControlName="stop"
+                 name="stop">
+          <label class="wrap-input__label" for="">Stop</label>
+          <div class="wrap-input__line"></div>
+        </div>
+        <div class="wrap-input widget__input">
+          <input class="wrap-input__input" type="text"
+                 formControlName="limit"
+                 name="limit">
+          <label class="wrap-input__label" for="">Limit</label>
+          <div class="wrap-input__line"></div>
+        </div>
       </div>
-      <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text"
-               formControlName="limit"
-               name="limit">
-        <label class="wrap-input__label" for="">Limit</label>
-        <div class="wrap-input__line"></div>
+      <div class="row row--jcsb widget__trading-row">
+        <div class="wrap-input widget__input widget__input--mr32">
+          <input class="wrap-input__input" type="text"
+                 formControlName="quantityOf"
+                 (input)="percents = null"
+                 name="quantityOf">
+          <label class="wrap-input__label" for="">Quantity of BTC</label>
+          <div class="wrap-input__line"></div>
+        </div>
+        <div class="wrap-input widget__input">
+          <input class="wrap-input__input" type="text"
+                 formControlName="totalIn"
+                 name="totalIn">
+          <label class="wrap-input__label" for="">Total in USD</label>
+          <div class="wrap-input__line"></div>
+        </div>
       </div>
-    </div>
-    <div class="row row--jcsb widget__trading-row">
-      <div class="wrap-input widget__input widget__input--mr32">
-        <input class="wrap-input__input" type="text"
-               formControlName="quantityOf"
-               (input)="percents = null"
-               name="quantityOf">
-        <label class="wrap-input__label" for="">Quantity of BTC</label>
-        <div class="wrap-input__line"></div>
-      </div>
-      <div class="wrap-input widget__input">
-        <input class="wrap-input__input" type="text"
-               formControlName="totalIn"
-               name="totalIn">
-        <label class="wrap-input__label" for="">Total in USD</label>
-        <div class="wrap-input__line"></div>
-      </div>
-    </div>
     </form>
 
     <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
       <div class="avaliable">
         <span>
           <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
+            <path
+              d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
           </svg>
         </span>
         <span style="vertical-align: middle;">Avaliable: </span>
-        <a href="#">300 000 000 USD</a>
-      <div>
-        Avaliable: <a href="#">{{userMoney}} USD</a>
-
+        <a href="#">{{userMoney}} USD</a>
       </div>
       <div>
         Fee: 0.45 USD
@@ -129,9 +127,8 @@
       </div>
     </div>
     <button class="btn btn--active widget__trading-btn" (click)="onSubmit()">Sell BTC</button>
+  </form>
 </div>
-
-
 
 
 <div class="widget__content widget__content--mob" style="height: 100%;">
@@ -163,7 +160,8 @@
       <div class="avaliable">
         <span>
           <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
+            <path
+              d="M7.23181 6.84126V8.72983C7.23181 9.08029 7.41189 9.35214 7.56677 9.35214H12V6.21888H7.56677C7.41189 6.21888 7.23181 6.4908 7.23181 6.84126ZM9.05815 7.05851C9.43365 7.05851 9.73913 7.38464 9.73913 7.78551C9.73913 8.18639 9.43365 8.51251 9.05815 8.51251C8.68266 8.51251 8.37718 8.18639 8.37718 7.78551C8.37718 7.38464 8.68266 7.05851 9.05815 7.05851ZM7.56677 10.3633C6.85985 10.3633 6.2847 9.63047 6.2847 8.72983V6.84126C6.2847 5.94062 6.85979 5.20783 7.56677 5.20783H12V3.97574C12 3.35222 11.6172 2.82286 11.0894 2.63991L10.2623 0.325323C10.2155 0.194484 10.12 0.0902034 9.99851 0.0373555C9.87702 -0.0154251 9.74051 -0.0121895 9.6213 0.046523L4.49908 2.57102H1.31579C0.590302 2.57102 0 3.20122 0 3.97574V11.5952C0 12.3698 0.590302 13 1.31579 13H10.6842C11.4097 13 12 12.3698 12 11.5952V10.3633H7.56677ZM9.5581 1.19138L10.0511 2.57109H6.75876L9.5581 1.19138Z"/>
           </svg>
         </span>
         <span style="vertical-align: middle;">Avaliable: </span>
