added tradeView chart widget

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -94,8 +94,9 @@
     </div>
   </div>
   <div class="widget__content">
-    <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
-     -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 400px;"></div>
+    <!-- <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
+     -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 400px;"></div> -->
+     <div class="amcharts-stock_chart_div" id="tradingview_afc29"></div>
   </div>
   <div class="widget__content widget__content--mob" style="padding-bottom: 40px;">
     <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
