--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -26,7 +26,7 @@
         <th class="table__cell-head table__cell-head--tar">Price</th>
       </tr>
       </thead>
-      <tbody class="table__body">
+      <tbody class="table__body table__body--none-shadow">
       <!-- t-row start-->
       <tr class="table__row--mob">
         <td class="table__cell table__cell--tal">
@@ -43,28 +43,35 @@
           <div>1.1068069</div>
           <span class="txt-small txt-red">Sell limit</span>
         </td>
+        <td class="table__cell table__cell--arr-mob">
+          <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
+        </td>
       <!-- t-row end-->
       <!-- t-row start-->
-      <tr class="table-row--request-details">
-        <td class="table__cell table__cell-more-info--mob" colspan="4">
-          <div class="request__details-left-line"></div>
-          <div class="requests__details-item">
-            <div class="requests__details-item-title">Comission</div>
-            <div class="requests__details-item-value">0.02% ~ 200 000 </div>
+      <tr class="table__details">
+        <td class="table__details-cell" colspan="4">
+          <!--<div class="table__details-left-line"></div>-->
+          <!--<div class="table__details-bottom-line"></div>-->
+          <div class="table__details-item">
+            <div class="table__details-item-title">Order id</div>
+            <div class="table__details-item-value">234566113434 </div>
           </div>
-          <div class="requests__details-item">
-            <div class="requests__details-item-title">Payment system</div>
-            <div class="requests__details-item-value">CIMB NAGA </div>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Total Price</div>
+            <div class="table__details-item-value">227.7 USD</div>
           </div>
-          <div class="requests__details-item">
-            <div class="requests__details-item-title">Status</div>
-            <div class="requests__details-item-value">Awaits payment</div>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Type</div>
+            <div class="table__details-item-value"><span class="txt-green">Buy limit</span></div>
           </div>
-          <div class="requests__details-item">
-            <div class="requests__details-item-title requests__details-item-left"><a class="button table__cell-button table__cell-button--visible" href="#">I paid</a></div>
-            <div class="requests__details-item-value requests__details-item-right"><a class="button table__cell-button table__cell-button--visible table__cell-button--revoke table__cell-button--red" href="#">Revoke                      </a></div>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Fee</div>
+            <div class="table__details-item-value">0.2% ~ 0.003423 BTC</div>
           </div>
-          <div class="requests__details-item-line"></div>
+          <div class="table__details-item">
+            <div class="table__details-item-title"><button class="btn btn--small">Cancel</button></div>
+          </div>
+
         </td>
       </tr>
       <!-- t-row end-->
@@ -96,19 +103,19 @@
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">From</label>
 
-          <!--<my-date-picker-->
-            <!--name="from"-->
-            <!--[options]="myDatePickerOptions">-->
-          <!--</my-date-picker>-->
+          <my-date-picker
+            name="from"
+            [options]="myDatePickerOptions">
+          </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">To</label>
 
-          <!--<my-date-picker-->
-            <!--name="to"-->
-            <!--[options]="myDatePickerOptions">-->
-          <!--</my-date-picker>-->
+          <my-date-picker
+            name="to"
+            [options]="myDatePickerOptions">
+          </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
       </div>
