--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -91,7 +91,7 @@ b {
   max-width: 1320px;
   margin: 0 auto;
   @media (min-width:600px) {
-    padding: 0 12px 0;
+    //padding: 0 12px 0;
   }
   @media (min-width:1200px) {
     padding: 0 20px 0;
