--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -20,170 +20,10 @@
   </tr>
   </thead>
   <tbody class="table__body table__body--none-shadow">
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.02%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.42%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.34%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Sell <span>(Limit)</span></span>
-    </td>
 
+  <tr class="table__row" *ngFor="let order of openOrders">
     <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.53%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Sell <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.12%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
-    </td>
-    <td class="table__cell">
-      <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
+      <span>{{order.orderId}}</span>
     </td>
     <td class="table__cell">
       <div class="table__date-time">
@@ -195,16 +35,16 @@
       <span>Buy <span>(Limit)</span></span>
     </td>
     <td class="table__cell">
-      <span>4500 USD</span>
+      <span>{{order.averagePrice}} USD</span>
     </td>
     <td class="table__cell">
-      <span>0.005 BTC</span>
+      <span>{{order.amount}} BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>0.02%</span>
+      <span>{{order.commission}}%</span>
     </td>
     <td class="table__cell">
-      <span>6000 USD</span>
+      <span>{{order.total}} USD</span>
     </td>
     <td class="table__cell">
       <button class="btn btn--small btn--empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>
@@ -213,6 +53,169 @@
       <button class="btn btn--small btn--empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>
     </td>
   </tr>
+
+
+  <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>Buy <span>(Limit)</span></span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.42%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>-->
+    <!--</td>-->
+  <!--</tr>-->
+  <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>Buy <span>(Limit)</span></span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.34%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>-->
+    <!--</td>-->
+  <!--</tr>-->
+  <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>Sell <span>(Limit)</span></span>-->
+    <!--</td>-->
+
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.53%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>-->
+    <!--</td>-->
+  <!--</tr>-->
+  <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>Sell <span>(Limit)</span></span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.12%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>-->
+    <!--</td>-->
+  <!--</tr>-->
+  <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>Buy <span>(Limit)</span></span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.02%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn" style="width: 100%; max-width: 58px;">Cancel</button>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<button class="btn btn&#45;&#45;small btn&#45;&#45;empty-blue table__row-btn" style="width: 100%; max-width: 58px;">Edit</button>-->
+    <!--</td>-->
+  <!--</tr>-->
 
   </tbody>
 </table>
